replace old stuff with new one

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Checklist for Perl release 5.25.10</title>
+    <title>Checklist for Perl release 5.27.9</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./css/bootstrap.min.css" rel="stylesheet">
@@ -37,8 +37,8 @@
     <div class="container">
 
       <div class="blog-header">
-        <h1 class="blog-title">The Perl release 5.25.10</h1>
-        <p class="lead blog-description">My checklist for the developer release 5.25.10 of the programming language Perl.</p>
+        <h1 class="blog-title">The Perl release 5.27.9</h1>
+        <p class="lead blog-description">My checklist for the developer release 5.27.9 of the programming language Perl.</p>
       </div>
 
       <div class="row">
@@ -49,20 +49,20 @@
             <h2 class="blog-post-title">Current TODOs</h2>
             <p class="blog-post-meta">February 16, 2017 by Renée</p>
 
-<div class="panel panel-success">
+<!-- <div class="panel panel-danger">
   <div class="panel-heading">Release!</div>
   <div class="panel-body">
     <p>You can test the release!!</p>
     <ul>
-        <li><a href="./release/perl-5.25.10.tar.bz2">perl-5.25.10.tar.bz2</a> (ec5aa296f66860aa85978e41f4ef8207b1ea084b)</li>
-        <li><a href="./release/perl-5.25.10.tar.gz">perl-5.25.10.tar.gz</a> (0e7f4400de762b15d108f44b522175562ed51277)</li>
-        <li><a href="./release/perl-5.25.10.tar.xz">perl-5.25.10.tar.xz</a> (f1090316ae6c831c88200d3ed77d2c86b2771e31)</li>
+        <li><a href="./release/perl-5.27.9.tar.bz2">perl-5.27.9.tar.bz2</a> (ec5aa296f66860aa85978e41f4ef8207b1ea084b)</li>
+        <li><a href="./release/perl-5.27.9.tar.gz">perl-5.27.9.tar.gz</a> (0e7f4400de762b15d108f44b522175562ed51277)</li>
+        <li><a href="./release/perl-5.27.9.tar.xz">perl-5.27.9.tar.xz</a> (f1090316ae6c831c88200d3ed77d2c86b2771e31)</li>
     </ul>
   </div>
  <div class="panel-footer warning"><span class="warning"><span class="glyphicon glyphicon-ok"></span> </span></div>
-</div>
+</div> -->
 
-<div class="panel panel-warning">
+<div class="panel panel-danger">
   <div class="panel-heading">rt.perl.org update access</div>
   <div class="panel-body">
 <p>Make sure you have permission to close tickets on <a href="http://rt.perl.org/">http://rt.perl.org/</a> so you can respond to bug report as necessary during your stint. If you don't, make an account (if you don't have one) and contact the pumpking with your username to get ticket-closing permission.</p>
@@ -70,7 +70,7 @@
  <div class="panel-footer warning"><span class="warning"><span class="glyphicon glyphicon-remove"></span> Created new account and requested permissions.</span></div>
 </div>
 
-<div class="panel panel-warning">
+<div class="panel panel-danger">
   <div class="panel-heading">Quotation for release announcement epigraph</div>
   <div class="panel-body">
 <p>You will need a quotation to use as an epigraph to your release announcement.</p>
@@ -150,7 +150,7 @@
           <div class="sidebar-module sidebar-module-inset">
             <h4>About</h4>
             <p>This checklist is based on the <a href="https://metacpan.org/pod/distribution/perl/Porting/release_managers_guide.pod">Release Manager Guide</a>.</p>
-            <p>The sources for this website are available at <a href="https://github.com/reneeb/5-25-10">https://github.com/reneeb/5-25-10</a>.</p>
+            <p>The sources for this website are available at <a href="https://github.com/reneeb/5.27.9">https://github.com/reneeb/5.27.9</a>.</p>
           </div>
           <div class="sidebar-module">
             <h4>Steps</h4>
