--- a/on_the_day.html
+++ b/on_the_day.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Checklist for Perl release 5.25.10</title>
+    <title>Checklist for Perl release 5.27.9</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./css/bootstrap.min.css" rel="stylesheet">
@@ -37,8 +37,8 @@
     <div class="container">
 
       <div class="blog-header">
-        <h1 class="blog-title">The Perl release 5.25.10</h1>
-        <p class="lead blog-description">My checklist for the developer release 5.25.10 of the programming language Perl.</p>
+        <h1 class="blog-title">The Perl release 5.27.9</h1>
+        <p class="lead blog-description">My checklist for the developer release 5.27.9 of the programming language Perl.</p>
       </div>
 
       <div class="row">
@@ -787,7 +787,7 @@
           <div class="sidebar-module sidebar-module-inset">
             <h4>About</h4>
             <p>This checklist is based on the <a href="https://metacpan.org/pod/distribution/perl/Porting/release_managers_guide.pod">Release Manager Guide</a>.</p>
-            <p>The sources for this website are available at <a href="https://github.com/reneeb/5-25-10">https://github.com/reneeb/5-25-10</a>.</p>
+            <p>The sources for this website are available at <a href="https://github.com/reneeb/5.27.9">https://github.com/reneeb/5.27.9</a>.</p>
           </div>
           <div class="sidebar-module">
             <h4>Steps</h4>
