--- a/advance_actions.html
+++ b/advance_actions.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Checklist for Perl release 5.25.10</title>
+    <title>Checklist for Perl release 5.27.9</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./css/bootstrap.min.css" rel="stylesheet">
@@ -37,8 +37,8 @@
     <div class="container">
 
       <div class="blog-header">
-        <h1 class="blog-title">The Perl release 5.25.10</h1>
-        <p class="lead blog-description">My checklist for the developer release 5.25.10 of the programming language Perl.</p>
+        <h1 class="blog-title">The Perl release 5.27.9</h1>
+        <p class="lead blog-description">My checklist for the developer release 5.27.9 of the programming language Perl.</p>
       </div>
 
       <div class="row">
@@ -49,7 +49,7 @@
             <h2 class="blog-post-title">Building a release - advance action</h2>
             <p class="blog-post-meta">February 15, 2017 by Renée</p>
 <!-- content -->
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">dual-life CPAN module synchronisation</div>
   <div class="panel-body">
 
@@ -77,7 +77,7 @@
  <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> Nothing done, due to code freeze. Last run of script 2017-02-19</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">How to sync a CPAN module with a cpan/ distro</div>
   <div class="panel-body">
 
@@ -124,7 +124,7 @@
  <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> Nothing done due to code freeze.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">dual-life CPAN module stability</div>
   <div class="panel-body">
 <p>Ensure dual-life CPAN modules are stable, which comes down to:</p>
@@ -152,7 +152,7 @@
  <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">monitor smoke tests for failures</div>
   <div class="panel-body">
 
@@ -170,7 +170,7 @@
  <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">monitor CPAN testers for failures</div>
   <div class="panel-body">
 <p>For any release except a BLEAD-POINT: Examine the relevant analysis report(s) at http://analysis.cpantesters.org/beforemaintrelease to see how the impending release is performing compared to previous releases with regard to building and testing CPAN modules.</p>
@@ -184,7 +184,7 @@
  <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> This is a BLEAD-POINT release.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">update perldelta</div>
   <div class="panel-body">
 
@@ -201,7 +201,7 @@
  <div class="panel-footer"><span class="glyphicon glyphicon-done"></span> done.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">Bump the version number</div>
   <div class="panel-body">
 
@@ -263,7 +263,7 @@
  <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> Not done, yet. There's a section about bumping version numbers on "the day after".</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">update INSTALL</div>
   <div class="panel-body">
 
@@ -281,7 +281,7 @@
  <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> Not done, yet.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">Check copyright years</div>
   <div class="panel-body">
 
@@ -297,7 +297,7 @@
  <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done 2017-02-19.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">Check more build configurations</div>
   <div class="panel-body">
 
@@ -319,7 +319,7 @@
  <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done, no test failures.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">update perlport</div>
   <div class="panel-body">
 
@@ -332,7 +332,7 @@
  <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">check a readonly build</div>
   <div class="panel-body">
 
@@ -354,7 +354,7 @@
           <div class="sidebar-module sidebar-module-inset">
             <h4>About</h4>
             <p>This checklist is based on the <a href="https://metacpan.org/pod/distribution/perl/Porting/release_managers_guide.pod">Release Manager Guide</a>.</p>
-            <p>The sources for this website are available at <a href="https://github.com/reneeb/5-25-10">https://github.com/reneeb/5-25-10</a>.</p>
+            <p>The sources for this website are available at <a href="https://github.com/reneeb/5.27.9">https://github.com/reneeb/5.27.9</a>.</p>
           </div>
           <div class="sidebar-module">
             <h4>Steps</h4>
