reset todo items

--- a/advance_actions.html
+++ b/advance_actions.html
@@ -74,7 +74,7 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> Nothing done, due to code freeze. Last run of script 2017-02-19</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> Nothing done, due to code freeze. Last run of script 2017-02-19</span></div>
 </div>
 
 <div class="panel panel-danger">
@@ -121,7 +121,7 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> Nothing done due to code freeze.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> Nothing done due to code freeze.</span></div>
 </div>
 
 <div class="panel panel-danger">
@@ -149,7 +149,7 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> Not done, yet.</span></div>
 </div>
 
 <div class="panel panel-danger">
@@ -167,7 +167,7 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> Not done, yet.</span></div>
 </div>
 
 <div class="panel panel-danger">
@@ -181,7 +181,7 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> This is a BLEAD-POINT release.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> This is a BLEAD-POINT release.</span></div>
 </div>
 
 <div class="panel panel-danger">
@@ -198,7 +198,7 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-done"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> Not done, yet.</span></div>
 </div>
 
 <div class="panel panel-danger">
@@ -260,7 +260,7 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> Not done, yet. There's a section about bumping version numbers on "the day after".</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> Not done, yet. There's a section about bumping version numbers on "the day after".</span></div>
 </div>
 
 <div class="panel panel-danger">
@@ -278,7 +278,7 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> Not done, yet.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> Not done, yet.</span></div>
 </div>
 
 <div class="panel panel-danger">
@@ -294,7 +294,7 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done 2017-02-19.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span>Not done, yet.</span></div>
 </div>
 
 <div class="panel panel-danger">
@@ -316,7 +316,7 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done, no test failures.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> Not done, yet.</span></div>
 </div>
 
 <div class="panel panel-danger">
@@ -329,7 +329,7 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> Not done, yet.</span></div>
 </div>
 
 <div class="panel panel-danger">
@@ -342,7 +342,7 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> Not done, yet.</span></div>
 </div>
 
 
