--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
           <div class="blog-post">
             <h2 class="blog-post-title">Current TODOs</h2>
-            <p class="blog-post-meta">February 16, 2017 by Renée</p>
+            <p class="blog-post-meta">February 16, 2018 by Renée</p>
 
 <!-- <div class="panel panel-danger">
   <div class="panel-heading">Release!</div>
@@ -67,7 +67,7 @@
   <div class="panel-body">
 <p>Make sure you have permission to close tickets on <a href="http://rt.perl.org/">http://rt.perl.org/</a> so you can respond to bug report as necessary during your stint. If you don't, make an account (if you don't have one) and contact the pumpking with your username to get ticket-closing permission.</p>
   </div>
- <div class="panel-footer warning"><span class="warning"><span class="glyphicon glyphicon-remove"></span> Created new account and requested permissions.</span></div>
+ <div class="panel-footer warning"><span class="warning"><span class="glyphicon glyphicon-remove"></span> </span></div>
 </div>
 
 <div class="panel panel-danger">
@@ -75,7 +75,7 @@
   <div class="panel-body">
 <p>You will need a quotation to use as an epigraph to your release announcement.</p>
   </div>
- <div class="panel-footer warning"><span class="warning"><span class="glyphicon glyphicon-ok"></span> I have one, will be published on this website soon.</span></div>
+ <div class="panel-footer warning"><span class="warning"><span class="glyphicon glyphicon-remove"></span> Not done, yet</span></div>
 </div>
 
 <div class="panel panel-danger">
