--- a/on_the_day.html
+++ b/on_the_day.html
@@ -49,7 +49,7 @@
             <h2 class="blog-post-title">Building a release - on the day</h2>
             <p class="blog-post-meta">February 15, 2017 by Renée</p>
 <!-- content -->
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">re-check earlier actions</div>
   <div class="panel-body">
 
@@ -59,10 +59,10 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done on 2017-02-20.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done on 2017-02-20.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">create a release branch</div>
   <div class="panel-body">
 
@@ -73,10 +73,10 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">build a clean perl</div>
   <div class="panel-body">
 
@@ -92,10 +92,10 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-body">
 
 
@@ -109,20 +109,20 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">update Module::CoreList</div>
   <div class="panel-body">
 
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">finalize perldelta</div>
   <div class="panel-body">
 
@@ -158,10 +158,10 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">remove stale perldeltas</div>
   <div class="panel-body">
 
@@ -177,10 +177,10 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> This is a BLEAD-POINT release.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> This is a BLEAD-POINT release.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">add recent perldeltas</div>
   <div class="panel-body">
 
@@ -192,7 +192,7 @@
  <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> This is a BLEAD-POINT release.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">update and commit perldelta files</div>
   <div class="panel-body">
 
@@ -211,10 +211,10 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> This is a BLEAD-POINT release.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> This is a BLEAD-POINT release.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">build a clean perl</div>
   <div class="panel-body">
 
@@ -230,10 +230,10 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">synchronise from blead's perlhist.pod</div>
   <div class="panel-body">
 <p>For the first RC for a MAINT release, copy in the latest <em>pod/perlhist.pod</em> from blead; this will include details of newer releases in all branches. In theory, blead&#39;s version should be a strict superset of the one in this branch, but it&#39;s probably safest to examine the changes first, to ensure that there&#39;s nothing in this branch that was forgotten from blead. An easy way to do that is with <code>git checkout -p</code>, to selectively apply any changes from the blead version to your current branch:</p>
@@ -244,10 +244,10 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> This is a BLEAD-POINT release.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> This is a BLEAD-POINT release.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">update perlhist.pod</div>
   <div class="panel-body">
 
@@ -266,10 +266,10 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">update patchlevel.h</div>
   <div class="panel-body">
 
@@ -291,10 +291,10 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> This is a BLEAD-POINT release.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> This is a BLEAD-POINT release.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">run makemeta to update META files</div>
   <div class="panel-body">
 
@@ -308,10 +308,10 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">build, test and check a fresh perl</div>
   <div class="panel-body">
 
@@ -335,10 +335,10 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">create the release tag</div>
   <div class="panel-body">
 
@@ -351,10 +351,10 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">build the tarball</div>
   <div class="panel-body">
 
@@ -391,10 +391,10 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> Not done, yet.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> Not done, yet.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">test the tarball</div>
   <div class="panel-body">
 
@@ -403,10 +403,10 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">monitor smokes</div>
   <div class="panel-body">
 
@@ -420,10 +420,10 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> This is a BLEAD-POINT release.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> This is a BLEAD-POINT release.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">upload to PAUSE</div>
   <div class="panel-body">
 
@@ -446,10 +446,10 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">wait for indexing</div>
   <div class="panel-body">
 
@@ -458,10 +458,10 @@
 
 <p>Wait until you receive notification emails from the PAUSE indexer confirming that your uploads have been received. IMPORTANT -- you will probably get an email that indexing has failed, due to module permissions. This is considered normal.</p>
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> This is a BLEAD-POINT release.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> This is a BLEAD-POINT release.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">disarm patchlevel.h</div>
   <div class="panel-body">
 
@@ -483,10 +483,10 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> This is a BLEAD-POINT release.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> This is a BLEAD-POINT release.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">announce to p5p</div>
   <div class="panel-body">
 
@@ -499,10 +499,10 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">merge release branch back to blead</div>
   <div class="panel-body">
 <p>Merge the (local) release branch back into master now, and delete it.</p>
@@ -517,10 +517,10 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">publish the release tag</div>
   <div class="panel-body">
 
@@ -531,10 +531,10 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">update epigraphs.pod</div>
   <div class="panel-body">
 
@@ -543,7 +543,7 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
 </div>
 
 <div class="panel panel-danger">
@@ -556,7 +556,7 @@
  <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> Not done, yet.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">Release schedule</div>
   <div class="panel-body">
 
@@ -567,10 +567,10 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">Module::CoreList nagging</div>
   <div class="panel-body">
 
@@ -581,10 +581,10 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> No need to remind BinGOs (thanks BinGOs++).</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> No need to remind BinGOs (thanks BinGOs++).</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">new perldelta</div>
   <div class="panel-body">
 
@@ -610,10 +610,10 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">bump version</div>
   <div class="panel-body">
 
@@ -642,9 +642,9 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
 </div>
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">clean build and test</div>
   <div class="panel-body">
 
@@ -663,10 +663,10 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">push commits</div>
   <div class="panel-body">
 
@@ -677,10 +677,10 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">create maint branch</div>
   <div class="panel-body">
 
@@ -695,7 +695,7 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> This is a BLEAD-POINT release.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> This is a BLEAD-POINT release.</span></div>
 </div>
 
 <div class="panel panel-danger">
@@ -718,7 +718,7 @@
  <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> Not done, yet.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">copy perldelta.pod to blead</div>
   <div class="panel-body">
 
@@ -747,10 +747,10 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> This is a BLEAD-POINT release.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> This is a BLEAD-POINT release.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">copy perlhist.pod entries to blead</div>
   <div class="panel-body">
 
@@ -761,7 +761,7 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> Not done, yet.</span></div>
 </div>
 
 <div class="panel panel-danger">
