--- a/prerequesits.html
+++ b/prerequesits.html
@@ -49,7 +49,7 @@
             <h2 class="blog-post-title">Pre-release</h2>
             <p class="blog-post-meta">February 14, 2017 by Renée</p>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">PAUSE account with pumpkin status</div>
   <div class="panel-body">
 <p>Make sure you have a PAUSE account suitable for uploading a perl release. If you don't have a PAUSE account, then request one:<p>
@@ -57,7 +57,7 @@
 <p>Check that your account is allowed to upload perl distros: go to https://pause.perl.org/pause/authenquery?ACTION=who_pumpkin and check that your PAUSE ID is listed there. If not, ask Andreas König to add your ID to the list of people allowed to upload something called perl. You can find Andreas' email address at:</p>
 <p><pre><code>https://pause.perl.org/pause/query?ACTION=pause_04imprint</code></pre></p>
   </div>
- <div class="panel-footer warning"><span class="warning"><span class="glyphicon glyphicon-ok"></span> Andreas added me to group pumpking</span></div>
+ <div class="panel-footer warning"><span class="warning"><span class="glyphicon glyphicon-remove"></span> Andreas added me to group pumpking</span></div>
 </div>
 
 <div class="panel panel-warning">
@@ -68,13 +68,13 @@
  <div class="panel-footer warning"><span class="warning"><span class="glyphicon glyphicon-remove"></span> Created new account and requested permissions.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">git checkout and commit bit</div>
   <div class="panel-body">
 <p>You will need a working git installation, checkout of the perl git repository and perl commit bit. For information about working with perl and git, see <a href="https://metacpan.org/pod/perlgit">pod/perlgit.pod</a>.</p>
 <p>If you are not yet a perl committer, you won't be able to make a release. Have a chat with whichever evil perl porter tried to talk you into the idea in the first place to figure out the best way to resolve the issue.</p>
   </div>
- <div class="panel-footer warning"><span class="warning"><span class="glyphicon glyphicon-ok"></span> Made a test commit</span></div>
+ <div class="panel-footer warning"><span class="warning"><span class="glyphicon glyphicon-remove"></span> Not done, yet</span></div>
 </div>
 
 <div class="panel panel-success">
@@ -95,28 +95,28 @@
  <div class="panel-footer warning"><span class="warning"><span class="glyphicon glyphicon-ok"></span> Available at <a href="https://github.com/reneeb/perlweb">https://github.com/reneeb/perlweb</a></span></div>
 </div>
 
-<div class="panel panel-warning">
+<div class="panel panel-danger">
   <div class="panel-heading">Quotation for release announcement epigraph</div>
   <div class="panel-body">
 <p>You will need a quotation to use as an epigraph to your release announcement.</p>
   </div>
- <div class="panel-footer warning"><span class="warning"><span class="glyphicon glyphicon-ok"></span> I have one, will be published on this website soon.</span></div>
+ <div class="panel-footer warning"><span class="warning"><span class="glyphicon glyphicon-remove"></span> Not done, yet.</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">Install the previous version of perl</div>
   <div class="panel-body">
 <p>During the testing phase of the release you have created, you will be asked to compare the installed files with a previous install. Save yourself some time on release day, and have a (clean) install of the previous version ready.</p>
   </div>
- <div class="panel-footer warning"><span class="warning"><span class="glyphicon glyphicon-ok"></span> Installed Perl 5.24.1</span></div>
+ <div class="panel-footer warning"><span class="warning"><span class="glyphicon glyphicon-remove"></span> Not done, yet</span></div>
 </div>
 
-<div class="panel panel-success">
+<div class="panel panel-danger">
   <div class="panel-heading">Create virtual machines for testing</div>
   <div class="panel-body">
 <p>When the tarball is created, you should check it (preferrably on more than one machine.</p>
   </div>
- <div class="panel-footer warning"><span class="warning"><span class="glyphicon glyphicon-ok"></span> Setup an Ubuntu and a FreeBSD box</span></div>
+ <div class="panel-footer warning"><span class="warning"><span class="glyphicon glyphicon-remove"></span> Not done, yet</span></div>
 </div>
           </div><!-- /.blog-post -->
 
@@ -126,7 +126,7 @@
           <div class="sidebar-module sidebar-module-inset">
             <h4>About</h4>
             <p>This checklist is based on the <a href="https://metacpan.org/pod/distribution/perl/Porting/release_managers_guide.pod">Release Manager Guide</a>.</p>
-            <p>The sources for this website are available at <a href="https://github.com/reneeb/5.27.9">https://github.com/reneeb/5.27.9</a>.</p>
+            <p>The sources for this website are available at <a href="https://github.com/reneeb/5.27.9">https://github.com/reneeb/5-27-9</a>.</p>
           </div>
           <div class="sidebar-module">
             <h4>Steps</h4>
