--- a/prerequesits.html
+++ b/prerequesits.html
@@ -49,7 +49,7 @@
             <h2 class="blog-post-title">Pre-release</h2>
             <p class="blog-post-meta">February 14, 2017 by Renée</p>
 
-<div class="panel panel-danger">
+<div class="panel panel-success">
   <div class="panel-heading">PAUSE account with pumpkin status</div>
   <div class="panel-body">
 <p>Make sure you have a PAUSE account suitable for uploading a perl release. If you don't have a PAUSE account, then request one:<p>
@@ -68,13 +68,13 @@
  <div class="panel-footer warning"><span class="warning"><span class="glyphicon glyphicon-remove"></span> Created new account and requested permissions.</span></div>
 </div>
 
-<div class="panel panel-danger">
+<div class="panel panel-success">
   <div class="panel-heading">git checkout and commit bit</div>
   <div class="panel-body">
 <p>You will need a working git installation, checkout of the perl git repository and perl commit bit. For information about working with perl and git, see <a href="https://metacpan.org/pod/perlgit">pod/perlgit.pod</a>.</p>
 <p>If you are not yet a perl committer, you won't be able to make a release. Have a chat with whichever evil perl porter tried to talk you into the idea in the first place to figure out the best way to resolve the issue.</p>
   </div>
- <div class="panel-footer warning"><span class="warning"><span class="glyphicon glyphicon-remove"></span> Not done, yet</span></div>
+ <div class="panel-footer warning"><span class="warning"><span class="glyphicon glyphicon-ok"></span> done</span></div>
 </div>
 
 <div class="panel panel-success">
@@ -103,12 +103,12 @@
  <div class="panel-footer warning"><span class="warning"><span class="glyphicon glyphicon-remove"></span> Not done, yet.</span></div>
 </div>
 
-<div class="panel panel-danger">
+<div class="panel panel-success">
   <div class="panel-heading">Install the previous version of perl</div>
   <div class="panel-body">
 <p>During the testing phase of the release you have created, you will be asked to compare the installed files with a previous install. Save yourself some time on release day, and have a (clean) install of the previous version ready.</p>
   </div>
- <div class="panel-footer warning"><span class="warning"><span class="glyphicon glyphicon-remove"></span> Not done, yet</span></div>
+ <div class="panel-footer warning"><span class="warning"><span class="glyphicon glyphicon-ok"></span> Perl 5.26.1 installed</span></div>
 </div>
 
 <div class="panel panel-danger">
@@ -116,7 +116,7 @@
   <div class="panel-body">
 <p>When the tarball is created, you should check it (preferrably on more than one machine.</p>
   </div>
- <div class="panel-footer warning"><span class="warning"><span class="glyphicon glyphicon-remove"></span> Not done, yet</span></div>
+ <div class="panel-footer warning"><span class="warning"><span class="glyphicon glyphicon-remove"></span> done, used JiffyBoxes</span></div>
 </div>
           </div><!-- /.blog-post -->
 
