--- a/prerequesits.html
+++ b/prerequesits.html
@@ -95,12 +95,12 @@
  <div class="panel-footer warning"><span class="warning"><span class="glyphicon glyphicon-ok"></span> Available at <a href="https://github.com/reneeb/perlweb">https://github.com/reneeb/perlweb</a></span></div>
 </div>
 
-<div class="panel panel-danger">
+<div class="panel panel-success">
   <div class="panel-heading">Quotation for release announcement epigraph</div>
   <div class="panel-body">
 <p>You will need a quotation to use as an epigraph to your release announcement.</p>
   </div>
- <div class="panel-footer warning"><span class="warning"><span class="glyphicon glyphicon-remove"></span> Not done, yet.</span></div>
+ <div class="panel-footer warning"><span class="warning"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
 </div>
 
 <div class="panel panel-success">
@@ -111,7 +111,7 @@
  <div class="panel-footer warning"><span class="warning"><span class="glyphicon glyphicon-ok"></span> Perl 5.26.1 installed</span></div>
 </div>
 
-<div class="panel panel-danger">
+<div class="panel panel-success">
   <div class="panel-heading">Create virtual machines for testing</div>
   <div class="panel-body">
 <p>When the tarball is created, you should check it (preferrably on more than one machine.</p>
