--- a/prerequesits.html
+++ b/prerequesits.html
@@ -100,7 +100,7 @@
   <div class="panel-body">
 <p>You will need a quotation to use as an epigraph to your release announcement.</p>
   </div>
- <div class="panel-footer warning"><span class="warning"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
+ <div class="panel-footer warning"><span class="warning"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
 </div>
 
 <div class="panel panel-success">
@@ -116,7 +116,7 @@
   <div class="panel-body">
 <p>When the tarball is created, you should check it (preferrably on more than one machine.</p>
   </div>
- <div class="panel-footer warning"><span class="warning"><span class="glyphicon glyphicon-remove"></span> done, used JiffyBoxes</span></div>
+ <div class="panel-footer warning"><span class="warning"><span class="glyphicon glyphicon-ok"></span> done, used JiffyBoxes</span></div>
 </div>
           </div><!-- /.blog-post -->
 
