--- a/prerequesits.html
+++ b/prerequesits.html
@@ -57,7 +57,7 @@
 <p>Check that your account is allowed to upload perl distros: go to https://pause.perl.org/pause/authenquery?ACTION=who_pumpkin and check that your PAUSE ID is listed there. If not, ask Andreas König to add your ID to the list of people allowed to upload something called perl. You can find Andreas' email address at:</p>
 <p><pre><code>https://pause.perl.org/pause/query?ACTION=pause_04imprint</code></pre></p>
   </div>
- <div class="panel-footer warning"><span class="warning"><span class="glyphicon glyphicon-remove"></span> Andreas added me to group pumpking</span></div>
+ <div class="panel-footer warning"><span class="warning"><span class="glyphicon glyphicon-ok"></span> Andreas added me to group pumpking</span></div>
 </div>
 
 <div class="panel panel-warning">
