--- a/advance_actions.html
+++ b/advance_actions.html
@@ -49,7 +49,7 @@
             <h2 class="blog-post-title">Building a release - advance action</h2>
             <p class="blog-post-meta">February 15, 2017 by Renée</p>
 <!-- content -->
-<div class="panel panel-danger">
+<div class="panel panel-success">
   <div class="panel-heading">dual-life CPAN module synchronisation</div>
   <div class="panel-body">
 
@@ -77,7 +77,7 @@
  <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> Nothing done, due to code freeze. Last run of script 2017-02-19</span></div>
 </div>
 
-<div class="panel panel-danger">
+<div class="panel panel-success">
   <div class="panel-heading">How to sync a CPAN module with a cpan/ distro</div>
   <div class="panel-body">
 
@@ -124,7 +124,7 @@
  <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> Nothing done due to code freeze.</span></div>
 </div>
 
-<div class="panel panel-danger">
+<div class="panel panel-success">
   <div class="panel-heading">dual-life CPAN module stability</div>
   <div class="panel-body">
 <p>Ensure dual-life CPAN modules are stable, which comes down to:</p>
@@ -149,7 +149,7 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> Not done, yet.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
 </div>
 
 <div class="panel panel-danger">
@@ -170,7 +170,7 @@
  <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> Not done, yet.</span></div>
 </div>
 
-<div class="panel panel-danger">
+<div class="panel panel-success">
   <div class="panel-heading">monitor CPAN testers for failures</div>
   <div class="panel-body">
 <p>For any release except a BLEAD-POINT: Examine the relevant analysis report(s) at http://analysis.cpantesters.org/beforemaintrelease to see how the impending release is performing compared to previous releases with regard to building and testing CPAN modules.</p>
@@ -263,7 +263,7 @@
  <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> Not done, yet. There's a section about bumping version numbers on "the day after".</span></div>
 </div>
 
-<div class="panel panel-danger">
+<div class="panel panel-warning">
   <div class="panel-heading">update INSTALL</div>
   <div class="panel-body">
 
@@ -278,10 +278,10 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> Not done, yet.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> Checked pre-release, update it post-release.</span></div>
 </div>
 
-<div class="panel panel-danger">
+<div class="panel panel-success">
   <div class="panel-heading">Check copyright years</div>
   <div class="panel-body">
 
@@ -294,10 +294,10 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span>Not done, yet.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span>done.</span></div>
 </div>
 
-<div class="panel panel-danger">
+<div class="panel panel-success">
   <div class="panel-heading">Check more build configurations</div>
   <div class="panel-body">
 
@@ -316,10 +316,10 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> Not done, yet.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
 </div>
 
-<div class="panel panel-danger">
+<div class="panel panel-success">
   <div class="panel-heading">update perlport</div>
   <div class="panel-body">
 
@@ -329,7 +329,7 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> Not done, yet.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
 </div>
 
 <div class="panel panel-danger">
