--- a/on_the_day.html
+++ b/on_the_day.html
@@ -161,7 +161,7 @@
  <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
 </div>
 
-<div class="panel panel-danger">
+<div class="panel panel-success">
   <div class="panel-heading">remove stale perldeltas</div>
   <div class="panel-body">
 
@@ -180,7 +180,7 @@
  <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> This is a BLEAD-POINT release.</span></div>
 </div>
 
-<div class="panel panel-danger">
+<div class="panel panel-success">
   <div class="panel-heading">add recent perldeltas</div>
   <div class="panel-body">
 
@@ -192,7 +192,7 @@
  <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> This is a BLEAD-POINT release.</span></div>
 </div>
 
-<div class="panel panel-danger">
+<div class="panel panel-success">
   <div class="panel-heading">update and commit perldelta files</div>
   <div class="panel-body">
 
@@ -230,10 +230,10 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> Not done, yet.</span></div>
 </div>
 
-<div class="panel panel-danger">
+<div class="panel panel-success">
   <div class="panel-heading">synchronise from blead's perlhist.pod</div>
   <div class="panel-body">
 <p>For the first RC for a MAINT release, copy in the latest <em>pod/perlhist.pod</em> from blead; this will include details of newer releases in all branches. In theory, blead&#39;s version should be a strict superset of the one in this branch, but it&#39;s probably safest to examine the changes first, to ensure that there&#39;s nothing in this branch that was forgotten from blead. An easy way to do that is with <code>git checkout -p</code>, to selectively apply any changes from the blead version to your current branch:</p>
@@ -266,10 +266,10 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span>Not done, yet.</span></div>
 </div>
 
-<div class="panel panel-danger">
+<div class="panel panel-success">
   <div class="panel-heading">update patchlevel.h</div>
   <div class="panel-body">
 
@@ -308,7 +308,7 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span>Not done, yet.</span></div>
 </div>
 
 <div class="panel panel-danger">
@@ -335,7 +335,7 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span>Not done, yet.</span></div>
 </div>
 
 <div class="panel panel-danger">
@@ -351,7 +351,7 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span>Not done, yet.</span></div>
 </div>
 
 <div class="panel panel-danger">
@@ -403,10 +403,10 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span>Not done, yet.</span></div>
 </div>
 
-<div class="panel panel-danger">
+<div class="panel panel-success">
   <div class="panel-heading">monitor smokes</div>
   <div class="panel-body">
 
@@ -446,10 +446,10 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span>Not done, yet.</span></div>
 </div>
 
-<div class="panel panel-danger">
+<div class="panel panel-success">
   <div class="panel-heading">wait for indexing</div>
   <div class="panel-body">
 
@@ -461,7 +461,7 @@
  <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> This is a BLEAD-POINT release.</span></div>
 </div>
 
-<div class="panel panel-danger">
+<div class="panel panel-success">
   <div class="panel-heading">disarm patchlevel.h</div>
   <div class="panel-body">
 
@@ -499,7 +499,7 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span>Not done, yet.</span></div>
 </div>
 
 <div class="panel panel-danger">
@@ -517,7 +517,7 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span>Not done, yet.</span></div>
 </div>
 
 <div class="panel panel-danger">
@@ -531,7 +531,7 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span>Not done, yet.</span></div>
 </div>
 
 <div class="panel panel-danger">
@@ -543,7 +543,7 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span>Not done, yet.</span></div>
 </div>
 
 <div class="panel panel-danger">
@@ -567,7 +567,7 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span>Not done, yet.</span></div>
 </div>
 
 <div class="panel panel-danger">
@@ -581,7 +581,7 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> No need to remind BinGOs (thanks BinGOs++).</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> Not done, yet.</span></div>
 </div>
 
 <div class="panel panel-danger">
@@ -610,7 +610,7 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span>Not done, yet.</span></div>
 </div>
 
 <div class="panel panel-danger">
@@ -642,7 +642,7 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span>Not done, yet.</span></div>
 </div>
 <div class="panel panel-danger">
   <div class="panel-heading">clean build and test</div>
@@ -663,7 +663,7 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span>Not done, yet.</span></div>
 </div>
 
 <div class="panel panel-danger">
@@ -677,10 +677,10 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span>Not done, yet.</span></div>
 </div>
 
-<div class="panel panel-danger">
+<div class="panel panel-success">
   <div class="panel-heading">create maint branch</div>
   <div class="panel-body">
 
@@ -718,7 +718,7 @@
  <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> Not done, yet.</span></div>
 </div>
 
-<div class="panel panel-danger">
+<div class="panel panel-success">
   <div class="panel-heading">copy perldelta.pod to blead</div>
   <div class="panel-body">
 
