--- a/advance_actions.html
+++ b/advance_actions.html
@@ -201,7 +201,7 @@
  <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> Not done, yet.</span></div>
 </div>
 
-<div class="panel panel-danger">
+<div class="panel panel-warning">
   <div class="panel-heading">Bump the version number</div>
   <div class="panel-body">
 
@@ -332,7 +332,7 @@
  <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
 </div>
 
-<div class="panel panel-danger">
+<div class="panel panel-success">
   <div class="panel-heading">check a readonly build</div>
   <div class="panel-body">
 
@@ -342,7 +342,7 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> Not done, yet.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span>done.</span></div>
 </div>
 
 
