--- a/on_the_day.html
+++ b/on_the_day.html
@@ -49,7 +49,7 @@
             <h2 class="blog-post-title">Building a release - on the day</h2>
             <p class="blog-post-meta">February 15, 2017 by Renée</p>
 <!-- content -->
-<div class="panel panel-danger">
+<div class="panel panel-success">
   <div class="panel-heading">re-check earlier actions</div>
   <div class="panel-body">
 
@@ -59,10 +59,10 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done on 2017-02-20.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done on 2018-02-20.</span></div>
 </div>
 
-<div class="panel panel-danger">
+<div class="panel panel-success">
   <div class="panel-heading">create a release branch</div>
   <div class="panel-body">
 
@@ -73,7 +73,7 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
 </div>
 
 <div class="panel panel-danger">
