--- a/on_the_day.html
+++ b/on_the_day.html
@@ -76,7 +76,7 @@
  <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
 </div>
 
-<div class="panel panel-danger">
+<div class="panel panel-success">
   <div class="panel-heading">build a clean perl</div>
   <div class="panel-body">
 
@@ -92,7 +92,7 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
 </div>
 
 <div class="panel panel-danger">
