--- a/on_the_day.html
+++ b/on_the_day.html
@@ -95,7 +95,7 @@
  <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
 </div>
 
-<div class="panel panel-danger">
+<div class="panel panel-success">
   <div class="panel-body">
 
 
@@ -109,20 +109,20 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
 </div>
 
-<div class="panel panel-danger">
+<div class="panel panel-success">
   <div class="panel-heading">update Module::CoreList</div>
   <div class="panel-body">
 
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
 </div>
 
-<div class="panel panel-danger">
+<div class="panel panel-success">
   <div class="panel-heading">finalize perldelta</div>
   <div class="panel-body">
 
@@ -158,7 +158,7 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> done.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
 </div>
 
 <div class="panel panel-success">
@@ -214,7 +214,7 @@
  <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> This is a BLEAD-POINT release.</span></div>
 </div>
 
-<div class="panel panel-danger">
+<div class="panel panel-success">
   <div class="panel-heading">build a clean perl</div>
   <div class="panel-body">
 
@@ -230,7 +230,7 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> Not done, yet.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span>done.</span></div>
 </div>
 
 <div class="panel panel-success">
