--- a/on_the_day.html
+++ b/on_the_day.html
@@ -247,7 +247,7 @@
  <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> This is a BLEAD-POINT release.</span></div>
 </div>
 
-<div class="panel panel-danger">
+<div class="panel panel-success">
   <div class="panel-heading">update perlhist.pod</div>
   <div class="panel-body">
 
@@ -266,7 +266,7 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span>Not done, yet.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
 </div>
 
 <div class="panel panel-success">
@@ -294,7 +294,7 @@
  <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> This is a BLEAD-POINT release.</span></div>
 </div>
 
-<div class="panel panel-danger">
+<div class="panel panel-success">
   <div class="panel-heading">run makemeta to update META files</div>
   <div class="panel-body">
 
@@ -308,7 +308,7 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span>Not done, yet.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
 </div>
 
 <div class="panel panel-danger">
