--- a/on_the_day.html
+++ b/on_the_day.html
@@ -311,7 +311,7 @@
  <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
 </div>
 
-<div class="panel panel-danger">
+<div class="panel panel-success">
   <div class="panel-heading">build, test and check a fresh perl</div>
   <div class="panel-body">
 
@@ -335,7 +335,7 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span>Not done, yet.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
 </div>
 
 <div class="panel panel-danger">
@@ -698,7 +698,7 @@
  <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> This is a BLEAD-POINT release.</span></div>
 </div>
 
-<div class="panel panel-danger">
+<div class="panel panel-success">
   <div class="panel-heading">make the maint branch available in the APC</div>
   <div class="panel-body">
 
@@ -715,7 +715,7 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span> Not done, yet.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> This is a BLEAD-POINT release.</div>
 </div>
 
 <div class="panel panel-success">
