--- a/on_the_day.html
+++ b/on_the_day.html
@@ -394,7 +394,7 @@
  <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
 </div>
 
-<div class="panel panel-danger">
+<div class="panel panel-successful">
   <div class="panel-heading">test the tarball</div>
   <div class="panel-body">
 
@@ -403,7 +403,7 @@
 
 
   </div>
- <div class="panel-footer"><span class="glyphicon glyphicon-remove"></span>Not done, yet.</span></div>
+ <div class="panel-footer"><span class="glyphicon glyphicon-ok"></span> done.</span></div>
 </div>
 
 <div class="panel panel-success">
